solid-virtual in policy composer

--- a/packages/policy-composer/package.json
+++ b/packages/policy-composer/package.json
@@ -14,6 +14,7 @@
 		"@kobalte/core": "^0.13.1",
 		"@mattrax/configuration-schemas": "workspace:*",
 		"@mattrax/ui": "workspace:*",
+		"@tanstack/solid-virtual": "^3.5.0",
 		"solid-js": "^1.8.17"
 	}
 }
