Cleanup `.env.example`

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,25 @@
-# openssl rand -hex 24
-AUTH_SECRET=areallylongsecretthatyoushouldreplace
-INTERNAL_SECRET=areallylongsecretthatyoushouldreplace
 PROD_ORIGIN=http://localhost:3000
-MDM_URL=http://localhost:8005
-EMAIL_URL=http://localhost:3002
 DATABASE_URL='mysql://todo:todo@aws.connect.psdb.cloud/todo?ssl={"rejectUnauthorized":true}'
+
+# Auth - Generate with `openssl rand -hex 24`
+AUTH_SECRET=areallylongsecretthatyoushouldreplace
+
+# Rust
+INTERNAL_SECRET=areallylongsecretthatyoushouldreplace
+MDM_URL=http://localhost:8005
+
+# Billing
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
+
 # Syncing users
 ENTRA_CLIENT_ID=
 ENTRA_CLIENT_SECRET=
+
+# Email
 FROM_ADDRESS=console
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+# AWS_ACCESS_KEY_ID=
+# AWS_SECRET_ACCESS_KEY=
 
 # Used for landing only
 VITE_MATTRAX_CLOUD_ORIGIN=http://localhost:3000 # Should point to `apps/web`
