--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
 		"cbuild": "NITRO_PRESET=cloudflare_pages vinxi build"
 	},
 	"dependencies": {
+		"@corvu/otp-field": "^0.1.0",
 		"@hono/zod-validator": "^0.2.1",
 		"@kobalte/core": "^0.13.1",
 		"@kobalte/tailwindcss": "^0.9.0",
@@ -62,7 +63,6 @@
 		"drizzle-orm": "^0.30.10",
 		"h3": "^1.11.1",
 		"hono": "^4.3.7",
-		"input-otp": "^1.2.4",
 		"jose": "^5.3.0",
 		"lucia": "^3.2.0",
 		"oslo": "^1.2.0",
