--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"vinxi": "^0.3.11"
 	},
 	"devDependencies": {
-		"husky": "^9.0.11"
+		"husky": "^9.0.11",
+		"wrangler": "^3.57.1"
 	},
 	"resolutions": {
 		"drizzle-orm": "^0.30.8"
