--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -122,6 +122,11 @@ jobs:
         id: result
         run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_ENV
 
+      - name: echo A
+        env:
+          TEST: ${{steps.result.outputs.DEPLOYMENT_URL}}
+        run: echo "AA $TEST BB"
+
   web:
     name: Web
     runs-on: ubuntu-latest
