Dyanmic URL of Cloudflare GH Environments (#312)
* do it

* export properly

* fix?

* a

* a

* Cleanup

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -63,7 +63,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: landing
-      url: https://mattrax.app
+      url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
     needs: [sst]
     if: ${{ !failure() && !cancelled() }}
     steps:
@@ -84,14 +84,18 @@ jobs:
         run: pnpm landing build
 
       - name: Deploy
-        run: pnpm landing exec wrangler pages deploy dist/ --project-name mattrax-landing
+        run: pnpm landing exec wrangler pages deploy dist/ --project-name mattrax-landing | tee -a BUILD_OUTPUT
+      
+      - name: Export URL
+        id: result
+        run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
 
   docs:
     name: Docs
     runs-on: ubuntu-latest
     environment:
       name: docs
-      url: https://docs.mattrax.app
+      url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
     needs: [sst]
     if: ${{ !failure() && !cancelled() }}
     steps:
@@ -112,14 +116,18 @@ jobs:
         run: pnpm landing build
 
       - name: Deploy
-        run: pnpm landing exec wrangler pages deploy dist/ --project-name mattrax-docs
+        run: pnpm landing exec wrangler pages deploy dist/ --project-name mattrax-docs | tee -a BUILD_OUTPUT
+      
+      - name: Export URL
+        id: result
+        run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
 
   web:
     name: Web
     runs-on: ubuntu-latest
     environment:
       name: web
-      url: https://cloud.mattrax.app
+      url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
     needs: [sst]
     if: ${{ !failure() && !cancelled() }}
     steps:
@@ -152,4 +160,8 @@ jobs:
         run: pnpm web build
 
       - name: Deploy
-        run: pnpm web exec wrangler pages deploy dist/ --project-name mattrax
+        run: pnpm web exec wrangler pages deploy dist/ --project-name mattrax | tee -a BUILD_OUTPUT
+      
+      - name: Export URL
+        id: result
+        run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
