--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -58,14 +58,14 @@ jobs:
           OAUTH_CLIENT_ID: kXdvzkEgiN11CNTRL
           OAUTH_CLIENT_SECRET: ${{ secrets.TAILSCALE_OAUTH_SECRET }}
 
+  # TODO: use matrix for all jobs
+
   landing:
     name: Landing
     runs-on: ubuntu-latest
     environment:
       name: landing
       url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
-    needs: [sst]
-    if: ${{ !failure() && !cancelled() }}
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v4
@@ -83,12 +83,12 @@ jobs:
           VITE_MATTRAX_CLOUD_ORIGIN: https://cloud.mattrax.app
         run: pnpm landing build
 
-      - name: Deploy
-        run: pnpm landing exec wrangler pages deploy dist/ --project-name mattrax-landing | tee -a BUILD_OUTPUT
+      # - name: Deploy
+      #   run: pnpm landing exec wrangler pages deploy dist/ --project-name mattrax-landing | tee -a BUILD_OUTPUT
       
-      - name: Export URL
-        id: result
-        run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
+      # - name: Export URL
+      #   id: result
+      #   run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
 
   docs:
     name: Docs
@@ -96,8 +96,6 @@ jobs:
     environment:
       name: docs
       url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
-    needs: [sst]
-    if: ${{ !failure() && !cancelled() }}
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v4
@@ -115,21 +113,18 @@ jobs:
           VITE_MATTRAX_CLOUD_ORIGIN: https://cloud.mattrax.app
         run: pnpm landing build
 
-      - name: Deploy
-        run: pnpm landing exec wrangler pages deploy dist/ --project-name mattrax-docs | tee -a BUILD_OUTPUT
+      # - name: Deploy
+      #   run: pnpm landing exec wrangler pages deploy dist/ --project-name mattrax-docs | tee -a BUILD_OUTPUT
       
-      - name: Export URL
-        id: result
-        run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
+      # - name: Export URL
+      #   id: result
+      #   run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
 
   web:
-    name: Web
+    name: Build Web
     runs-on: ubuntu-latest
     environment:
       name: web
-      url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
-    needs: [sst]
-    if: ${{ !failure() && !cancelled() }}
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v4
@@ -159,9 +154,40 @@ jobs:
           NITRO_PRESET: cloudflare_pages
         run: pnpm web build
 
-      - name: Deploy
-        run: pnpm web exec wrangler pages deploy dist/ --project-name mattrax | tee -a BUILD_OUTPUT
+  web-deploy:
+    name: Deploy Web
+    runs-on: ubuntu-latest
+    needs: [sst, web]
+    # Run regardless of if previous steps were skipped
+    if: ${{ !failure() && !cancelled() }}
+    environment:
+      name: web
+      url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
+    steps:
+      - name: todo
+        run: echo "DEPLOYMENT_URL=https://example.com" >> $GITHUB_OUTPUT
+
+  # deploy:
+  #   name: Deploy to Cloudflare
+  #   runs-on: ubuntu-latest
+  #   needs: [sst, landing, docs, web]
+  #   # Run regardless of if previous steps were skipped
+  #   if: ${{ !failure() && !cancelled() }}
+  #   steps:
+  #     # TODO: Only run deploy if the previous step ran??? -> Then where would the URL come from?
+
+  #     - name: todo
+  #       run: |
+  #         echo "CLOUD_URL=https://example.com" >> $GITHUB_OUTPUT
+  #         echo "LANDING_URL=https://example.com" >> $GITHUB_OUTPUT
+  #         echo "DOCS_URL=https://example.com" >> $GITHUB_OUTPUT
+
+  #     # - name: Install wrangler
+  #     #   run: echo "Hello World"
+
+  #     # - name: Deploy
+  #     #   run: pnpm web exec wrangler pages deploy dist/ --project-name mattrax | tee -a BUILD_OUTPUT
       
-      - name: Export URL
-        id: result
-        run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
+  #     # - name: Export URL
+  #     #   id: result
+  #     #   run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
