--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -15,6 +15,8 @@ env:
   CLOUDFLARE_ACCOUNT_ID: f02b3ef168fe64129e9941b4fb2e4dc1
   CLOUDFLARE_EMAIL: oscar@mattrax.app
   CLOUDFLARE_API_KEY: ${{ secrets.CLOUDFLARE_API_KEY }}
+  # Used when building landing
+  VITE_MATTRAX_CLOUD_ORIGIN: https://cloud.mattrax.app
 
 jobs:
   sst:
@@ -60,12 +62,17 @@ jobs:
 
   # TODO: use matrix for all jobs
 
-  landing:
-    name: Landing
+  build:
+    strategy:
+      matrix:
+        projects:
+          - landing
+          - docs
+          - web
+    name: Build ${{ matrix.name }}
     runs-on: ubuntu-latest
     environment:
-      name: landing
-      url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
+      name: ${{ matrix.name }}
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v4
@@ -80,114 +87,27 @@ jobs:
       - name: Build
         env:
           NITRO_PRESET: cloudflare_pages
-          VITE_MATTRAX_CLOUD_ORIGIN: https://cloud.mattrax.app
-        run: pnpm landing build
-
-      # - name: Deploy
-      #   run: pnpm landing exec wrangler pages deploy dist/ --project-name mattrax-landing | tee -a BUILD_OUTPUT
-      
-      # - name: Export URL
-      #   id: result
-      #   run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
-
-  docs:
-    name: Docs
+        run: pnpm landing build # TODO: Project name
+    
+  deploy:
+    strategy:
+      matrix:
+        projects:
+          - landing
+          - docs
+          - web
+    name: Deploy ${{ matrix.name }}
     runs-on: ubuntu-latest
     environment:
-      name: docs
+      name: ${{ matrix.name }}
       url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
     steps:
+      # We pull this so Cloudflare can link the commit up
       - name: Git clone the repository
         uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4
-        with:
-          version: latest
+      # TODO: Get built artifacts
 
-      - name: Install
-        run: pnpm i
-      
-      - name: Build
-        env:
-          NITRO_PRESET: cloudflare_pages
-          VITE_MATTRAX_CLOUD_ORIGIN: https://cloud.mattrax.app
-        run: pnpm landing build
-
-      # - name: Deploy
-      #   run: pnpm landing exec wrangler pages deploy dist/ --project-name mattrax-docs | tee -a BUILD_OUTPUT
-      
-      # - name: Export URL
-      #   id: result
-      #   run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
-
-  web:
-    name: Build Web
-    runs-on: ubuntu-latest
-    environment:
-      name: web
-    steps:
-      - name: Git clone the repository
-        uses: actions/checkout@v4
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: "arn:aws:iam::101829795063:role/mattrax-gh-actions"
-          aws-region: us-east-1
-          role-session-name: mattrax-sst-workflow
-
-      - uses: pnpm/action-setup@v4
-        with:
-          version: latest
-
-      - name: Install SST
-        run: curl -fsSL https://ion.sst.dev/install | bash
-
-      - name: Install
-        run: pnpm i
-
-      - name: Pull secrets
-        run: pnpm infra secret list --stage brendonovich > .env
-      
-      - name: Build
-        env:
-          NITRO_PRESET: cloudflare_pages
-        run: pnpm web build
-
-  web-deploy:
-    name: Deploy Web
-    runs-on: ubuntu-latest
-    needs: [sst, web]
-    # Run regardless of if previous steps were skipped
-    if: ${{ !failure() && !cancelled() }}
-    environment:
-      name: web
-      url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
-    steps:
-      - name: todo
+      - name: Export `DEPLOYMENT_URL`
+        id: result
         run: echo "DEPLOYMENT_URL=https://example.com" >> $GITHUB_OUTPUT
-
-  # deploy:
-  #   name: Deploy to Cloudflare
-  #   runs-on: ubuntu-latest
-  #   needs: [sst, landing, docs, web]
-  #   # Run regardless of if previous steps were skipped
-  #   if: ${{ !failure() && !cancelled() }}
-  #   steps:
-  #     # TODO: Only run deploy if the previous step ran??? -> Then where would the URL come from?
-
-  #     - name: todo
-  #       run: |
-  #         echo "CLOUD_URL=https://example.com" >> $GITHUB_OUTPUT
-  #         echo "LANDING_URL=https://example.com" >> $GITHUB_OUTPUT
-  #         echo "DOCS_URL=https://example.com" >> $GITHUB_OUTPUT
-
-  #     # - name: Install wrangler
-  #     #   run: echo "Hello World"
-
-  #     # - name: Deploy
-  #     #   run: pnpm web exec wrangler pages deploy dist/ --project-name mattrax | tee -a BUILD_OUTPUT
-      
-  #     # - name: Export URL
-  #     #   id: result
-  #     #   run: echo "DEPLOYMENT_URL=$(grep -Eo 'https://[^ >]+' BUILD_OUTPUT|head -1)" >> $GITHUB_OUTPUT
