--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -62,52 +62,67 @@ jobs:
 
   # TODO: use matrix for all jobs
 
-  build:
+  projects:
     strategy:
       matrix:
         projects:
           - landing
           - docs
           - web
-    name: Build ${{ matrix.name }}
-    runs-on: ubuntu-latest
-    environment:
-      name: ${{ matrix.name }}
-    steps:
-      - name: Git clone the repository
-        uses: actions/checkout@v4
+    uses: ./.github/workflows/cd-deploy.yaml
+    with:
+      project: ${{ matrix.projects }}
+    secrets: inherit
 
-      - uses: pnpm/action-setup@v4
-        with:
-          version: latest
+  # build:
+  #   strategy:
+  #     matrix:
+  #       projects:
+  #         - landing
+  #         - docs
+  #         - web
+  #   name: Build ${{ matrix.name }}
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: ${{ matrix.name }}
+  #   steps:
+  #     - name: Git clone the repository
+  #       uses: actions/checkout@v4
 
-      - name: Install
-        run: pnpm i
+  #     - uses: pnpm/action-setup@v4
+  #       with:
+  #         version: latest
+
+  #     - name: Install
+  #       run: pnpm i
       
-      - name: Build
-        env:
-          NITRO_PRESET: cloudflare_pages
-        run: pnpm landing build # TODO: Project name
+  #     - name: Build
+  #       env:
+  #         NITRO_PRESET: cloudflare_pages
+  #       run: pnpm landing build # TODO: Project name
     
-  deploy:
-    strategy:
-      matrix:
-        projects:
-          - landing
-          - docs
-          - web
-    name: Deploy ${{ matrix.name }}
-    runs-on: ubuntu-latest
-    environment:
-      name: ${{ matrix.name }}
-      url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
-    steps:
-      # We pull this so Cloudflare can link the commit up
-      - name: Git clone the repository
-        uses: actions/checkout@v4
+  # deploy:
+  #   strategy:
+  #     matrix:
+  #       projects:
+  #         - landing
+  #         - docs
+  #         - web
+  #   name: Deploy ${{ matrix.name }}
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - sst
+  #     - build
+  #   environment:
+  #     name: ${{ matrix.name }}
+  #     url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
+  #   steps:
+  #     # We pull this so Cloudflare can link the commit up
+  #     - name: Git clone the repository
+  #       uses: actions/checkout@v4
 
-      # TODO: Get built artifacts
+  #     # TODO: Get built artifacts
 
-      - name: Export `DEPLOYMENT_URL`
-        id: result
-        run: echo "DEPLOYMENT_URL=https://example.com" >> $GITHUB_OUTPUT
+  #     - name: Export `DEPLOYMENT_URL`
+  #       id: result
+  #       run: echo "DEPLOYMENT_URL=https://example.com" >> $GITHUB_OUTPUT
