--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -60,69 +60,45 @@ jobs:
           OAUTH_CLIENT_ID: kXdvzkEgiN11CNTRL
           OAUTH_CLIENT_SECRET: ${{ secrets.TAILSCALE_OAUTH_SECRET }}
 
-  # TODO: use matrix for all jobs
+  build:
+      name: Build ${{ inputs.project }}
+      runs-on: ubuntu-latest
+      environment:
+        name: ${{ inputs.project }}
+      steps:
+        - name: Git clone the repository
+          uses: actions/checkout@v4
 
-  projects:
-    strategy:
-      matrix:
-        projects:
-          - landing
-          - docs
-          - web
-    uses: ./.github/workflows/cd-deploy.yaml
-    with:
-      project: ${{ matrix.projects }}
-    secrets: inherit
+        - uses: pnpm/action-setup@v4
+          with:
+            version: latest
 
-  # build:
-  #   strategy:
-  #     matrix:
-  #       projects:
-  #         - landing
-  #         - docs
-  #         - web
-  #   name: Build ${{ matrix.name }}
-  #   runs-on: ubuntu-latest
-  #   environment:
-  #     name: ${{ matrix.name }}
-  #   steps:
-  #     - name: Git clone the repository
-  #       uses: actions/checkout@v4
+        - name: Install
+          run: pnpm i
+        
+        - name: Build
+          env:
+            NITRO_PRESET: cloudflare_pages
+          run: pnpm landing build # TODO: Project name
 
-  #     - uses: pnpm/action-setup@v4
-  #       with:
-  #         version: latest
+    deploy:
+      name: Deploy ${{ inputs.project}}
+      runs-on: ubuntu-latest
+      needs:
+        - sst
+        # This will wait for *all* projects to build, not just the one we care about
+        # GitHub don't provide a better solution :(
+        - build
+      environment:
+        name: ${{ inputs.project }}
+        url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
+      steps:
+        # We pull this so Cloudflare can link the commit up
+        - name: Git clone the repository
+          uses: actions/checkout@v4
 
-  #     - name: Install
-  #       run: pnpm i
-      
-  #     - name: Build
-  #       env:
-  #         NITRO_PRESET: cloudflare_pages
-  #       run: pnpm landing build # TODO: Project name
-    
-  # deploy:
-  #   strategy:
-  #     matrix:
-  #       projects:
-  #         - landing
-  #         - docs
-  #         - web
-  #   name: Deploy ${{ matrix.name }}
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - sst
-  #     - build
-  #   environment:
-  #     name: ${{ matrix.name }}
-  #     url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
-  #   steps:
-  #     # We pull this so Cloudflare can link the commit up
-  #     - name: Git clone the repository
-  #       uses: actions/checkout@v4
+        # TODO: Get built artifacts
 
-  #     # TODO: Get built artifacts
-
-  #     - name: Export `DEPLOYMENT_URL`
-  #       id: result
-  #       run: echo "DEPLOYMENT_URL=https://example.com" >> $GITHUB_OUTPUT
+        - name: Export `DEPLOYMENT_URL`
+          id: result
+          run: echo "DEPLOYMENT_URL=https://example.com" >> $GITHUB_OUTPUT
