--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -64,7 +64,7 @@ jobs:
       name: Build ${{ inputs.project }}
       runs-on: ubuntu-latest
       environment:
-        name: ${{ inputs.project }}
+        name: ${{ matrix.projects }}
       steps:
         - name: Git clone the repository
           uses: actions/checkout@v4
@@ -79,14 +79,20 @@ jobs:
         - name: Build
           env:
             NITRO_PRESET: cloudflare_pages
-          run: pnpm landing build # TODO: Project name
+          run: pnpm run ${{ matrix.projects }} build
+
+        - name: Upload result
+          uses: actions/upload-artifact@v4
+          with:
+            name: ${{ matrix.projects }}-dist
+            path: apps/${{ matrix.projects }}/dist
 
     deploy:
       name: Deploy ${{ inputs.project}}
       runs-on: ubuntu-latest
       needs:
         - sst
-        # This will wait for *all* projects to build, not just the one we care about
+        # This will wait for *all* projects to build, not just the one we care about.
         # GitHub don't provide a better solution :(
         - build
       environment:
