--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -61,50 +61,62 @@ jobs:
           OAUTH_CLIENT_SECRET: ${{ secrets.TAILSCALE_OAUTH_SECRET }}
 
   build:
-      name: Build ${{ inputs.project }}
-      runs-on: ubuntu-latest
-      environment:
-        name: ${{ matrix.projects }}
-      steps:
-        - name: Git clone the repository
-          uses: actions/checkout@v4
+    strategy:
+      matrix:
+        projects:
+          - landing
+          - docs
+          - web
+    name: Build ${{ inputs.project }}
+    runs-on: ubuntu-latest
+    environment:
+      name: ${{ matrix.projects }}
+    steps:
+      - name: Git clone the repository
+        uses: actions/checkout@v4
 
-        - uses: pnpm/action-setup@v4
-          with:
-            version: latest
+      - uses: pnpm/action-setup@v4
+        with:
+          version: latest
 
-        - name: Install
-          run: pnpm i
-        
-        - name: Build
-          env:
-            NITRO_PRESET: cloudflare_pages
-          run: pnpm run ${{ matrix.projects }} build
+      - name: Install
+        run: pnpm i
+      
+      - name: Build
+        env:
+          NITRO_PRESET: cloudflare_pages
+        run: pnpm run ${{ matrix.projects }} build
 
-        - name: Upload result
-          uses: actions/upload-artifact@v4
-          with:
-            name: ${{ matrix.projects }}-dist
-            path: apps/${{ matrix.projects }}/dist
+      - name: Upload result
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.projects }}-dist
+          path: apps/${{ matrix.projects }}/dist
 
-    deploy:
-      name: Deploy ${{ inputs.project}}
-      runs-on: ubuntu-latest
-      needs:
-        - sst
-        # This will wait for *all* projects to build, not just the one we care about.
-        # GitHub don't provide a better solution :(
-        - build
-      environment:
-        name: ${{ inputs.project }}
-        url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
-      steps:
-        # We pull this so Cloudflare can link the commit up
-        - name: Git clone the repository
-          uses: actions/checkout@v4
+  deploy:
+    strategy:
+      matrix:
+        projects:
+          - landing
+          - docs
+          - web
+    name: Deploy ${{ inputs.project}}
+    runs-on: ubuntu-latest
+    needs:
+      - sst
+      # This will wait for *all* projects to build, not just the one we care about.
+      # GitHub don't provide a better solution :(
+      - build
+    environment:
+      name: ${{ inputs.project }}
+      url: ${{ steps.result.outputs.DEPLOYMENT_URL }}
+    steps:
+      # We pull this so Cloudflare can link the commit up
+      - name: Git clone the repository
+        uses: actions/checkout@v4
 
-        # TODO: Get built artifacts
+      # TODO: Get built artifacts
 
-        - name: Export `DEPLOYMENT_URL`
-          id: result
-          run: echo "DEPLOYMENT_URL=https://example.com" >> $GITHUB_OUTPUT
+      - name: Export `DEPLOYMENT_URL`
+        id: result
+        run: echo "DEPLOYMENT_URL=https://example.com" >> $GITHUB_OUTPUT
